fixed collapsed fieldsets

--- a/css/bootstrap-drupal.css
+++ b/css/bootstrap-drupal.css
@@ -276,6 +276,11 @@ fieldset .fieldset-description {
   margin-bottom: 18px;
 }
 
+html.js fieldset.collapsed {
+  margin-bottom: 18px;
+  height: auto;
+}
+
 /* Autocomplete
 ------------------------------- */
 html.js input.form-autocomplete {
